tests/testdata/config/byon.yaml
# Verify the route can send to an arbitrary service name
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: byon
  namespace: testns
spec:
  hosts:
    - byon.test.istio.io
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 127.0.0.2
      ports:
        http: 7072
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: byon
  namespace: testns
spec:
  hosts:
    - mybyon.test.istio.io
  http:
    - route:
        - destination:
            host: byon.test.istio.io

---
## VM running docker ( see deb/run/docker )
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: byon-docker
  namespace: testns
spec:
  hosts:
    - byon-docker.test.istio.io
  ports:
    - number: 7072
      name: http
      protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 172.18.0.3
      ports:
        http: 7072
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: wikipedia-range
  namespace: testns
spec:
  hosts:
    - www.wikipedia.org
  addresses:
    - 91.198.174.192/27
    - 103.102.166.224/27
    - 198.35.26.96/27
    - 208.80.153.224/27
    - 208.80.154.224/27
  ports:
    - number: 443
      protocol: TCP
      name: tcp-port
  resolution: NONE
