tests/testdata/config/destination-rule-fqdn.yaml
# Fails if a service with the name exists: trusted_ca required !
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: fqdn
  namespace: testns
spec:
  host: www.webinf.info
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
