tests/testdata/config/destination-rule-locality.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: locality
  namespace: default
spec:
  host: locality.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
