tests/testdata/config/destination-rule-passthrough.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: drpassthrough
  namespace: testns
spec:
  host: "*.foo.com"
  trafficPolicy:
    loadBalancer:
      simple: PASSTHROUGH
