tests/testdata/config/destination-rule-ssl.yaml
# Fails if a service with the name exists: trusted_ca required !
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ssl-simple
  namespace: testns
spec:
  host: ssl1.webinf.info
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: SIMPLE
      caCertificates: /etc/ssl/certs/ca-certificates.crt
---
# This will not work: myCA not found, results in rejecting all clusters if the
# service exists.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: drprefix
  namespace: testns
spec:
  host: "random.webinf.info"
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
