tests/testdata/config/externalservice-httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ExternalService
metadata:
  name: httpbin
spec:
  hosts:
    - "httpbin.org"
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
  discovery: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ExternalService
metadata:
  name: httpbin-wildcard
spec:
  hosts:
    - "*.httpbin.org"
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
