tests/testdata/config/gateway-all.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: testns
spec:
  selector:
    app: my-gateway-controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - uk.bookinfo.com
        - eu.bookinfo.com
        - c.foo
      tls:
        httpsRedirect: true # sends 302 redirect for http requests
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - uk.bookinfo.com
        - eu.bookinfo.com
      tls:
        mode: SIMPLE #enables HTTPS on this port
        serverCertificate: /etc/certs/servercert.pem
        privateKey: /etc/certs/privatekey.pem
        #  - port:
        #      number: 9080
        #      name: http-wildcard
        # no hosts implies wildcard match
