tests/testdata/config/peer-authn-strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: testns
spec:
  mtls:
    mode: STRICT
---
