tests/testdata/config/rule-default-route-append-headers.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: appendh
  namespace: testns
spec:
  hosts:
    - appendh.test.istio.io
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 127.0.0.2
      ports:
        http: 7072
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: appendh-route
  namespace: testns
spec:
  hosts:
    - appendh.test.istio.io
  http:
    - route:
        - destination:
            host: appendh.test.istio.io
      headers:
        request:
          add:
            istio-custom-header: user-defined-value
