tests/testdata/config/rule-ingressgateway.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: gateway-bound-route
  namespace: testns
spec:
  hosts:
    - uk.bookinfo.com
  gateways:
    - istio-ingressgateway # pinned to ingress gateway only
  http:
    - route:
        - destination:
            host: c
            subset: v2
            port:
              number: 80
          weight: 100
